@@ -2,8 +2,6 @@ package org.pmiops.workbench.access;
 
 import static com.google.common.truth.Truth.assertThat;
 import static com.google.common.truth.Truth8.assertThat;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.ArgumentMatchers.eq;
@@ -22,13 +20,13 @@ import java.time.Clock;
 import java.time.Duration;
 import java.time.Instant;
 import java.time.temporal.ChronoUnit;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 import java.util.Random;
 import java.util.function.Function;
 import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.params.ParameterizedTest;
-import org.junit.jupiter.params.provider.CsvSource;
+import org.junit.jupiter.api.Test;
 import org.pmiops.workbench.actionaudit.Agent;
 import org.pmiops.workbench.actionaudit.auditors.UserServiceAuditor;
 import org.pmiops.workbench.config.WorkbenchConfig;
@@ -45,7 +43,6 @@ import org.pmiops.workbench.db.model.DbInstitution;
 import org.pmiops.workbench.db.model.DbUser;
 import org.pmiops.workbench.db.model.DbUserAccessTier;
 import org.pmiops.workbench.db.model.DbUserCodeOfConductAgreement;
-import org.pmiops.workbench.db.model.DbUserInitialCreditsExpiration;
 import org.pmiops.workbench.db.model.DbVerifiedInstitutionalAffiliation;
 import org.pmiops.workbench.firecloud.FireCloudService;
 import org.pmiops.workbench.google.DirectoryService;
@@ -202,11 +199,8 @@ public class UserServiceAccessTest {
     PROVIDED_CLOCK.setInstant(START_INSTANT);
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,false"})
-  public void test_updateUserWithRetries_never_registered(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
-    setEnableInitialCreditsExpiration(enableInitialCreditsExpiration);
+  @Test
+  public void test_updateUserWithRetries_never_registered() {
     assertThat(userAccessTierDao.findAll()).isEmpty();
 
     dbUser = updateUserAccessTiers();
@@ -217,28 +211,21 @@ public class UserServiceAccessTest {
     Optional<DbUserAccessTier> userAccessMaybe =
         userAccessTierDao.getByUserAndAccessTier(dbUser, registeredTier);
     assertThat(userAccessMaybe).isEmpty();
-    assertUserInitialCreditsExpirationExists(initialCreditsExpirationExists);
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,true"})
-  public void test_updateUserWithRetries_register(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
-    setEnableInitialCreditsExpiration(enableInitialCreditsExpiration);
+  @Test
+  public void test_updateUserWithRetries_register() {
     assertThat(userAccessTierDao.findAll()).isEmpty();
 
     dbUser = updateUserWithRetries(this::registerUser);
     assertRegisteredTierEnabled(dbUser);
     assertUserNotInAccessTier(dbUser, controlledTier);
-    assertUserInitialCreditsExpirationExists(initialCreditsExpirationExists);
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,true"})
-  public void testSimulateUserFlowThroughRenewal(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
+  @Test
+  public void testSimulateUserFlowThroughRenewal() {
     // initialize user as registered with generic values including bypassed DUCC
-    setEnableInitialCreditsExpiration(enableInitialCreditsExpiration);
+
     dbUser = updateUserWithRetries(this::registerUser);
     assertRegisteredTierEnabled(dbUser);
 
@@ -264,7 +251,6 @@ public class UserServiceAccessTest {
         new Timestamp(PROVIDED_CLOCK.millis()));
     dbUser = updateUserAccessTiers();
     assertRegisteredTierEnabled(dbUser);
-    assertUserInitialCreditsExpirationExists(initialCreditsExpirationExists);
   }
 
   private DbUser removeDuccBypass(DbUser user) {
@@ -280,71 +266,53 @@ public class UserServiceAccessTest {
 
   // enabled/disabled is more of a master switch than a module but let's verify it anyway
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,true"})
-  public void test_updateUserWithRetries_disable_noncompliant(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
+  @Test
+  public void test_updateUserWithRetries_disable_noncompliant() {
     testUnregistration(
         user -> {
           user.setDisabled(true);
           return userDao.save(user);
-        },
-        enableInitialCreditsExpiration,
-        initialCreditsExpirationExists);
+        });
   }
 
   // ERA Commons is not subject to annual renewal.
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,true"})
-  public void test_updateUserWithRetries_era_unbypassed_noncompliant(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
+  @Test
+  public void test_updateUserWithRetries_era_unbypassed_noncompliant() {
     testUnregistration(
         user -> {
           accessModuleService.updateBypassTime(
               dbUser.getUserId(), DbAccessModuleName.ERA_COMMONS, false);
           return userDao.save(user);
-        },
-        enableInitialCreditsExpiration,
-        initialCreditsExpirationExists);
+        });
   }
 
   // Two Factor Auth (2FA) is not subject to annual renewal.
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,true"})
-  public void test_updateUserWithRetries_2fa_unbypassed_noncompliant(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
+  @Test
+  public void test_updateUserWithRetries_2fa_unbypassed_noncompliant() {
     testUnregistration(
         user -> {
           accessModuleService.updateBypassTime(
               dbUser.getUserId(), DbAccessModuleName.TWO_FACTOR_AUTH, false);
           return userDao.save(user);
-        },
-        enableInitialCreditsExpiration,
-        initialCreditsExpirationExists);
+        });
   }
 
   // Compliance training is subject to annual renewal.
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,true"})
-  public void test_updateUserWithRetries_training_unbypassed_aar_noncompliant(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
+  @Test
+  public void test_updateUserWithRetries_training_unbypassed_aar_noncompliant() {
     testUnregistration(
         user -> {
           accessModuleService.updateBypassTime(
               dbUser.getUserId(), DbAccessModuleName.RT_COMPLIANCE_TRAINING, false);
           return userDao.save(user);
-        },
-        enableInitialCreditsExpiration,
-        initialCreditsExpirationExists);
+        });
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,true"})
-  public void test_updateUserWithRetries_training_unbypassed_aar_expired_noncompliant(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
+  @Test
+  public void test_updateUserWithRetries_training_unbypassed_aar_expired_noncompliant() {
     testUnregistration(
         user -> {
           final Timestamp willExpire = Timestamp.from(START_INSTANT);
@@ -356,32 +324,24 @@ public class UserServiceAccessTest {
           advanceClockDays(EXPIRATION_DAYS + 1);
 
           return userDao.save(user);
-        },
-        enableInitialCreditsExpiration,
-        initialCreditsExpirationExists);
+        });
   }
 
   // DUCC is subject to annual renewal.
   // A missing DUCC version or a version other than the latest is also noncompliant.
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,true"})
-  public void test_updateUserWithRetries_ducc_unbypassed_aar_noncompliant(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
+  @Test
+  public void test_updateUserWithRetries_ducc_unbypassed_aar_noncompliant() {
     testUnregistration(
         user -> {
           accessModuleService.updateBypassTime(
               dbUser.getUserId(), DbAccessModuleName.DATA_USER_CODE_OF_CONDUCT, false);
           return userDao.save(user);
-        },
-        enableInitialCreditsExpiration,
-        initialCreditsExpirationExists);
+        });
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,true"})
-  public void test_updateUserWithRetries_ducc_unbypassed_aar_missing_version_noncompliant(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
+  @Test
+  public void test_updateUserWithRetries_ducc_unbypassed_aar_missing_version_noncompliant() {
     testUnregistration(
         user -> {
           accessModuleService.updateBypassTime(
@@ -389,15 +349,11 @@ public class UserServiceAccessTest {
           accessModuleService.updateCompletionTime(
               dbUser, DbAccessModuleName.DATA_USER_CODE_OF_CONDUCT, Timestamp.from(START_INSTANT));
           return userDao.save(user);
-        },
-        enableInitialCreditsExpiration,
-        initialCreditsExpirationExists);
+        });
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,true"})
-  public void test_updateUserWithRetries_ducc_unbypassed_aar_wrong_version_noncompliant(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
+  @Test
+  public void test_updateUserWithRetries_ducc_unbypassed_aar_wrong_version_noncompliant() {
     providedWorkbenchConfig.access.currentDuccVersions = ImmutableList.of(4, 5);
 
     testUnregistration(
@@ -408,15 +364,11 @@ public class UserServiceAccessTest {
               dbUser, DbAccessModuleName.DATA_USER_CODE_OF_CONDUCT, Timestamp.from(START_INSTANT));
           user.setDuccAgreement(signDucc(user, 3));
           return userDao.save(user);
-        },
-        enableInitialCreditsExpiration,
-        initialCreditsExpirationExists);
+        });
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,true"})
-  public void test_updateUserWithRetries_ducc_unbypassed_aar_expired_noncompliant(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
+  @Test
+  public void test_updateUserWithRetries_ducc_unbypassed_aar_expired_noncompliant() {
     testUnregistration(
         user -> {
           final Timestamp willExpire = Timestamp.from(START_INSTANT);
@@ -430,17 +382,13 @@ public class UserServiceAccessTest {
           advanceClockDays(EXPIRATION_DAYS + 1);
 
           return userDao.save(user);
-        },
-        enableInitialCreditsExpiration,
-        initialCreditsExpirationExists);
+        });
   }
 
   // Publications confirmation is subject to annual renewal.
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,true"})
-  public void test_updateUserWithRetries_publications_unbypassed_publications_not_confirmed(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
+  @Test
+  public void test_updateUserWithRetries_publications_unbypassed_publications_not_confirmed() {
     testUnregistration(
         user -> {
           accessModuleService.updateBypassTime(
@@ -448,15 +396,11 @@ public class UserServiceAccessTest {
           accessModuleService.updateCompletionTime(
               dbUser, DbAccessModuleName.PUBLICATION_CONFIRMATION, null);
           return userDao.save(user);
-        },
-        enableInitialCreditsExpiration,
-        initialCreditsExpirationExists);
+        });
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,true"})
-  public void test_updateUserWithRetries_publications_unbypassed_publications_expired(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
+  @Test
+  public void test_updateUserWithRetries_publications_unbypassed_publications_expired() {
     testUnregistration(
         user -> {
           accessModuleService.updateBypassTime(
@@ -467,17 +411,13 @@ public class UserServiceAccessTest {
           advanceClockDays(EXPIRATION_DAYS + 1);
 
           return userDao.save(user);
-        },
-        enableInitialCreditsExpiration,
-        initialCreditsExpirationExists);
+        });
   }
 
   // Profile confirmation is subject to annual renewal.
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,true"})
-  public void test_updateUserWithRetries_profile_unbypassed_profile_not_confirmed(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
+  @Test
+  public void test_updateUserWithRetries_profile_unbypassed_profile_not_confirmed() {
     testUnregistration(
         user -> {
           accessModuleService.updateBypassTime(
@@ -485,15 +425,11 @@ public class UserServiceAccessTest {
           accessModuleService.updateCompletionTime(
               dbUser, DbAccessModuleName.PROFILE_CONFIRMATION, null);
           return userDao.save(user);
-        },
-        enableInitialCreditsExpiration,
-        initialCreditsExpirationExists);
+        });
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,true"})
-  public void test_updateUserWithRetries_profile_unbypassed_profile_expired(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
+  @Test
+  public void test_updateUserWithRetries_profile_unbypassed_profile_expired() {
     testUnregistration(
         user -> {
           accessModuleService.updateBypassTime(
@@ -504,16 +440,11 @@ public class UserServiceAccessTest {
           advanceClockDays(EXPIRATION_DAYS + 1);
 
           return userDao.save(user);
-        },
-        enableInitialCreditsExpiration,
-        initialCreditsExpirationExists);
+        });
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,false"})
-  public void test_maybeSendAccessTierExpirationEmails_up_to_date(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
-    setEnableInitialCreditsExpiration(enableInitialCreditsExpiration);
+  @Test
+  public void test_maybeSendAccessTierExpirationEmails_up_to_date() {
     final Timestamp now = new Timestamp(PROVIDED_CLOCK.millis());
     accessModuleService.updateCompletionTime(dbUser, DbAccessModuleName.PROFILE_CONFIRMATION, now);
     accessModuleService.updateCompletionTime(
@@ -529,16 +460,13 @@ public class UserServiceAccessTest {
     userService.maybeSendAccessTierExpirationEmails(dbUser);
 
     verifyNoInteractions(mailService);
-    assertUserInitialCreditsExpirationExists(initialCreditsExpirationExists);
   }
 
   // bypassed modules do not expire: so no email
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,false"})
-  public void test_maybeSendAccessTierExpirationEmails_bypassed_is_up_to_date(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
-    setEnableInitialCreditsExpiration(enableInitialCreditsExpiration);
+  @Test
+  public void test_maybeSendAccessTierExpirationEmails_bypassed_is_up_to_date() {
+    final Timestamp now = new Timestamp(PROVIDED_CLOCK.millis());
 
     accessModuleService.updateBypassTime(
         dbUser.getUserId(), DbAccessModuleName.DATA_USER_CODE_OF_CONDUCT, true);
@@ -552,11 +480,9 @@ public class UserServiceAccessTest {
     userService.maybeSendAccessTierExpirationEmails(dbUser);
 
     verifyNoInteractions(mailService);
-    assertUserInitialCreditsExpirationExists(initialCreditsExpirationExists);
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,false"})
+  @Test
   public void test_maybeSendAccessTierExpirationEmails_expiring_1_rt() throws MessagingException {
     // these are up to date
     final Timestamp now = new Timestamp(PROVIDED_CLOCK.millis());
@@ -591,8 +517,7 @@ public class UserServiceAccessTest {
     verify(mailService, never()).alertUserAccessTierExpiration(any(), any(), any());
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,false"})
+  @Test
   public void test_maybeSendAccessTierExpirationEmails_expiring_1_ct() throws MessagingException {
     // expiring in 1 day (plus some) will trigger the 1-day warning
 
@@ -619,11 +544,8 @@ public class UserServiceAccessTest {
   // if any module is incomplete, we don't send an email
   // because the user is not expiring soon - they never had access at all
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,false"})
-  public void test_maybeSendAccessTierExpirationEmails_expired_but_missing(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
-    setEnableInitialCreditsExpiration(enableInitialCreditsExpiration);
+  @Test
+  public void test_maybeSendAccessTierExpirationEmails_expired_but_missing() {
     // these are up to date
     final Timestamp now = new Timestamp(PROVIDED_CLOCK.millis());
     accessModuleService.updateCompletionTime(
@@ -645,14 +567,12 @@ public class UserServiceAccessTest {
     userService.maybeSendAccessTierExpirationEmails(dbUser);
 
     verifyNoInteractions(mailService);
-    assertUserInitialCreditsExpirationExists(initialCreditsExpirationExists);
   }
 
   // one or more bypassed modules will not affect whether emails are sent.
   // we consider only the unbypassed
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,false"})
+  @Test
   public void test_maybeSendAccessTierExpirationEmails_expiring_1_with_bypass()
       throws MessagingException {
     // these are up to date
@@ -680,8 +600,7 @@ public class UserServiceAccessTest {
 
   // bypass times are not relevant to expiration emails
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,false"})
+  @Test
   public void test_maybeSendAccessTierExpirationEmails_expiring_1_with_older_bypass()
       throws MessagingException {
     // these are up to date
@@ -710,11 +629,8 @@ public class UserServiceAccessTest {
   // we do not send an email if the expiration time is within the day.
   // we sent one yesterday for 1 day already, and we will send another once it actually expires.
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,false"})
-  public void test_maybeSendAccessTierExpirationEmails_expiring_today(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
-    setEnableInitialCreditsExpiration(enableInitialCreditsExpiration);
+  @Test
+  public void test_maybeSendAccessTierExpirationEmails_expiring_today() {
     // these are up to date
     final Timestamp now = new Timestamp(PROVIDED_CLOCK.millis());
     accessModuleService.updateCompletionTime(dbUser, DbAccessModuleName.PROFILE_CONFIRMATION, now);
@@ -735,11 +651,9 @@ public class UserServiceAccessTest {
     userService.maybeSendAccessTierExpirationEmails(dbUser);
 
     verifyNoInteractions(mailService);
-    assertUserInitialCreditsExpirationExists(initialCreditsExpirationExists);
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,false"})
+  @Test
   public void test_maybeSendAccessTierExpirationEmail_expiring_30() throws MessagingException {
     // these are up to date
     final Timestamp now = new Timestamp(PROVIDED_CLOCK.millis());
@@ -766,11 +680,8 @@ public class UserServiceAccessTest {
             dbUser, 30, expirationTime, REGISTERED_TIER_SHORT_NAME);
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,false"})
-  public void test_maybeSendAccessTierExpirationEmails_expiring_31(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
-    setEnableInitialCreditsExpiration(enableInitialCreditsExpiration);
+  @Test
+  public void test_maybeSendAccessTierExpirationEmails_expiring_31() {
     // these are up to date
     final Timestamp now = new Timestamp(PROVIDED_CLOCK.millis());
     accessModuleService.updateCompletionTime(dbUser, DbAccessModuleName.PROFILE_CONFIRMATION, now);
@@ -789,13 +700,11 @@ public class UserServiceAccessTest {
     userService.maybeSendAccessTierExpirationEmails(dbUser);
 
     verifyNoInteractions(mailService);
-    assertUserInitialCreditsExpirationExists(initialCreditsExpirationExists);
   }
 
   // 15 days is sooner, so that's the email we send rather than 30
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,false"})
+  @Test
   public void test_maybeSendAccessTierExpirationEmails_expiring_15_and_30()
       throws MessagingException {
     // these are up to date
@@ -832,11 +741,8 @@ public class UserServiceAccessTest {
   // 14 days is sooner than 15, but 14 days is not one of our email warning thresholds
   // so we send no email
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,false"})
-  public void test_maybeSendAccessTierExpirationEmails_expiring_14_and_15(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
-    setEnableInitialCreditsExpiration(enableInitialCreditsExpiration);
+  @Test
+  public void test_maybeSendAccessTierExpirationEmails_expiring_14_and_15() {
     // these are up to date
     final Timestamp now = new Timestamp(PROVIDED_CLOCK.millis());
     accessModuleService.updateCompletionTime(dbUser, DbAccessModuleName.PROFILE_CONFIRMATION, now);
@@ -857,11 +763,9 @@ public class UserServiceAccessTest {
     userService.maybeSendAccessTierExpirationEmails(dbUser);
 
     verifyNoInteractions(mailService);
-    assertUserInitialCreditsExpirationExists(initialCreditsExpirationExists);
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,false"})
+  @Test
   public void test_maybeSendAccessTierExpirationEmails_expired_rt() throws MessagingException {
     // these are up to date
     final Timestamp now = new Timestamp(PROVIDED_CLOCK.millis());
@@ -894,8 +798,7 @@ public class UserServiceAccessTest {
         .alertUserAccessTierWarningThreshold(any(), anyLong(), any(), any());
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,false"})
+  @Test
   public void test_maybeSendAccessTierExpirationEmails_expired_ct() throws MessagingException {
     // but this is expired
     final Duration oneHour = Duration.ofHours(1);
@@ -921,11 +824,8 @@ public class UserServiceAccessTest {
   // don't send an email if we have been expired for more than a day
   // because we sent the expiration email yesterday
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,false"})
-  public void test_maybeSendAccessTierExpirationEmails_extra_expired(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
-    setEnableInitialCreditsExpiration(enableInitialCreditsExpiration);
+  @Test
+  public void test_maybeSendAccessTierExpirationEmails_extra_expired() {
     // these are up to date
     final Timestamp now = new Timestamp(PROVIDED_CLOCK.millis());
     accessModuleService.updateCompletionTime(dbUser, DbAccessModuleName.PROFILE_CONFIRMATION, now);
@@ -949,13 +849,10 @@ public class UserServiceAccessTest {
     userService.maybeSendAccessTierExpirationEmails(dbUser);
 
     verifyNoInteractions(mailService);
-    assertUserInitialCreditsExpirationExists(initialCreditsExpirationExists);
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,true"})
-  public void testInstitutionAddressInvalid_emailDomainsNotMatch(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
+  @Test
+  public void testInstitutionAddressInvalid_emailDomainsNotMatch() {
     testUnregistration(
         user -> {
           institutionService.updateInstitution(
@@ -963,45 +860,32 @@ public class UserServiceAccessTest {
               institution.tierConfigs(
                   ImmutableList.of(rtTierConfig.emailDomains(ImmutableList.of("test.com")))));
           return userDao.save(user);
-        },
-        enableInitialCreditsExpiration,
-        initialCreditsExpirationExists);
+        });
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,true"})
-  public void testInstitutionAddressInvalid_emailDomainsNull(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
+  @Test
+  public void testInstitutionAddressInvalid_emailDomainsNull() {
     testUnregistration(
         user -> {
           institutionService.updateInstitution(
               institution.getShortName(),
               institution.tierConfigs(ImmutableList.of(rtTierConfig.emailDomains(null))));
           return userDao.save(user);
-        },
-        enableInitialCreditsExpiration,
-        initialCreditsExpirationExists);
+        });
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,true"})
-  public void testInstitutionAddressInvalid_emailDomainsTierRequirementEmpty(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
+  @Test
+  public void testInstitutionAddressInvalid_emailDomainsTierRequirementEmpty() {
     testUnregistration(
         user -> {
           institutionService.updateInstitution(
               institution.getShortName(), institution.tierConfigs(ImmutableList.of()));
           return userDao.save(user);
-        },
-        enableInitialCreditsExpiration,
-        initialCreditsExpirationExists);
+        });
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,true"})
-  public void testInstitutionAddressInvalid_emailAddressMatch(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
-    setEnableInitialCreditsExpiration(enableInitialCreditsExpiration);
+  @Test
+  public void testInstitutionAddressInvalid_emailAddressMatch() {
     institutionService.updateInstitution(
         institution.getShortName(),
         institution.tierConfigs(
@@ -1012,13 +896,10 @@ public class UserServiceAccessTest {
                     .emailDomains(null))));
     dbUser = updateUserWithRetries(this::registerUser);
     assertRegisteredTierEnabled(dbUser);
-    assertUserInitialCreditsExpirationExists(initialCreditsExpirationExists);
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,true"})
-  public void testInstitutionAddressInvalid_emailAddressNotMatch(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
+  @Test
+  public void testInstitutionAddressInvalid_emailAddressNotMatch() {
     testUnregistration(
         user -> {
           institutionService.updateInstitution(
@@ -1030,15 +911,11 @@ public class UserServiceAccessTest {
                           .addEmailAddressesItem("randmom@email.com")
                           .emailDomains(null))));
           return userDao.save(user);
-        },
-        enableInitialCreditsExpiration,
-        initialCreditsExpirationExists);
+        });
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,true"})
-  public void testInstitutionAddressInvalid_emailAddressNull(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
+  @Test
+  public void testInstitutionAddressInvalid_emailAddressNull() {
     testUnregistration(
         user -> {
           institutionService.updateInstitution(
@@ -1046,30 +923,21 @@ public class UserServiceAccessTest {
               institution.tierConfigs(
                   ImmutableList.of(rtTierConfig.emailDomains(null).emailAddresses(null))));
           return userDao.save(user);
-        },
-        enableInitialCreditsExpiration,
-        initialCreditsExpirationExists);
+        });
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,true"})
-  public void testInstitutionAddressInvalid_emailAddressTierConfigNotExist(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
+  @Test
+  public void testInstitutionAddressInvalid_emailAddressTierConfigNotExist() {
     testUnregistration(
         user -> {
           institutionService.updateInstitution(
               institution.getShortName(), institution.tierConfigs(ImmutableList.of()));
           return userDao.save(user);
-        },
-        enableInitialCreditsExpiration,
-        initialCreditsExpirationExists);
+        });
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,true"})
-  public void testInstitutionRequirement_optionalEra(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
-    setEnableInitialCreditsExpiration(enableInitialCreditsExpiration);
+  @Test
+  public void testInstitutionRequirement_optionalEra() {
     assertThat(userAccessTierDao.findAll()).isEmpty();
     providedWorkbenchConfig.access.enableEraCommons = true;
     providedWorkbenchConfig.access.enableRasLoginGovLinking = true;
@@ -1092,14 +960,10 @@ public class UserServiceAccessTest {
         institution.tierConfigs(ImmutableList.of(rtTierConfig.eraRequired(false))));
     dbUser = updateUserAccessTiers();
     assertRegisteredTierEnabled(dbUser);
-    assertUserInitialCreditsExpirationExists(initialCreditsExpirationExists);
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,true"})
-  public void testInstitutionRequirement_optionalEra_loginGovFlagDisabled(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
-    setEnableInitialCreditsExpiration(enableInitialCreditsExpiration);
+  @Test
+  public void testInstitutionRequirement_optionalEra_loginGovFlagDisabled() {
     // User not complete eRA, but it is optional for that institution
     assertThat(userAccessTierDao.findAll()).isEmpty();
     providedWorkbenchConfig.access.enableEraCommons = true;
@@ -1117,14 +981,10 @@ public class UserServiceAccessTest {
     providedWorkbenchConfig.access.enableRasLoginGovLinking = false;
     dbUser = updateUserAccessTiers();
     assertRegisteredTierDisabled(dbUser);
-    assertUserInitialCreditsExpirationExists(initialCreditsExpirationExists);
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,true"})
-  public void testInstitutionRequirement_optionalEra_loginGovFlagEnabled_eRAFlagDisabled(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
-    setEnableInitialCreditsExpiration(enableInitialCreditsExpiration);
+  @Test
+  public void testInstitutionRequirement_optionalEra_loginGovFlagEnabled_eRAFlagDisabled() {
     // When eRA flag is disabled, that means user completed eRA Commons
     assertThat(userAccessTierDao.findAll()).isEmpty();
     updateUserWithRetries(this::registerUser);
@@ -1137,14 +997,10 @@ public class UserServiceAccessTest {
     accessModuleService.updateCompletionTime(dbUser, DbAccessModuleName.ERA_COMMONS, null);
     dbUser = updateUserAccessTiers();
     assertRegisteredTierEnabled(dbUser);
-    assertUserInitialCreditsExpirationExists(initialCreditsExpirationExists);
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,true"})
-  public void testRasLinkNotComplete(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
-    setEnableInitialCreditsExpiration(enableInitialCreditsExpiration);
+  @Test
+  public void testRasLinkNotComplete() {
     assertThat(userAccessTierDao.findAll()).isEmpty();
     providedWorkbenchConfig.access.enableRasLoginGovLinking = true;
     dbUser = updateUserWithRetries(this::registerUser);
@@ -1164,14 +1020,10 @@ public class UserServiceAccessTest {
         dbUser, DbAccessModuleName.RAS_LOGIN_GOV, new Timestamp(PROVIDED_CLOCK.millis()));
     dbUser = updateUserAccessTiers();
     assertRegisteredTierEnabled(dbUser);
-    assertUserInitialCreditsExpirationExists(initialCreditsExpirationExists);
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,true"})
-  public void testRasLinkNotComplete_LoginGovDisabled(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
-    setEnableInitialCreditsExpiration(enableInitialCreditsExpiration);
+  @Test
+  public void testRasLinkNotComplete_LoginGovDisabled() {
     // IDENTITY and LOGIN.GOV modules are not required for registered tier access when
     // enableRasLoginGovLinking is disabled.
     assertThat(userAccessTierDao.findAll()).isEmpty();
@@ -1182,40 +1034,28 @@ public class UserServiceAccessTest {
         dbUser.getUserId(), DbAccessModuleName.RAS_LOGIN_GOV, false);
     dbUser = updateUserAccessTiers();
     assertRegisteredTierEnabled(dbUser);
-    assertUserInitialCreditsExpirationExists(initialCreditsExpirationExists);
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,true"})
-  public void test_updateUserWithRetries_addToControlledTier(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
-    setEnableInitialCreditsExpiration(enableInitialCreditsExpiration);
+  @Test
+  public void test_updateUserWithRetries_addToControlledTier() {
     assertThat(userAccessTierDao.findAll()).isEmpty();
 
     dbUser = updateUserWithRetries(this::completeRTAndCTRequirements);
     assertRegisteredTierEnabled(dbUser);
     assertControlledTierEnabled(dbUser);
-    assertUserInitialCreditsExpirationExists(initialCreditsExpirationExists);
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,false"})
-  public void test_updateUserWithRetries_completeCTRequirementsOnly(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
-    setEnableInitialCreditsExpiration(enableInitialCreditsExpiration);
+  @Test
+  public void test_updateUserWithRetries_completeCTRequirementsOnly() {
     assertThat(userAccessTierDao.findAll()).isEmpty();
 
     dbUser = updateUserWithRetries(this::completeCTRequirements);
     assertUserNotInAccessTier(dbUser, registeredTier);
     assertUserNotInAccessTier(dbUser, controlledTier);
-    assertUserInitialCreditsExpirationExists(initialCreditsExpirationExists);
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,false"})
-  public void test_updateUserWithRetries_inCompleteCTRequirements_CTCompliance(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
-    setEnableInitialCreditsExpiration(enableInitialCreditsExpiration);
+  @Test
+  public void test_updateUserWithRetries_inCompleteCTRequirements_CTCompliance() {
     assertThat(userAccessTierDao.findAll()).isEmpty();
 
     dbUser = completeRTAndCTRequirements(dbUser);
@@ -1226,14 +1066,10 @@ public class UserServiceAccessTest {
 
     assertRegisteredTierEnabled(dbUser);
     assertUserNotInAccessTier(dbUser, controlledTier);
-    assertUserInitialCreditsExpirationExists(initialCreditsExpirationExists);
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,false"})
-  public void test_updateUserWithRetries_inCompleteCTRequirements_eraRequired(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
-    setEnableInitialCreditsExpiration(enableInitialCreditsExpiration);
+  @Test
+  public void test_updateUserWithRetries_inCompleteCTRequirements_eraRequired() {
     assertThat(userAccessTierDao.findAll()).isEmpty();
 
     dbUser = completeRTAndCTRequirements(dbUser);
@@ -1251,14 +1087,10 @@ public class UserServiceAccessTest {
 
     assertRegisteredTierEnabled(dbUser);
     assertUserNotInAccessTier(dbUser, controlledTier);
-    assertUserInitialCreditsExpirationExists(initialCreditsExpirationExists);
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,false"})
-  public void test_updateUserWithRetries_eraNotRequiredForTiers(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
-    setEnableInitialCreditsExpiration(enableInitialCreditsExpiration);
+  @Test
+  public void test_updateUserWithRetries_eraNotRequiredForTiers() {
     assertThat(userAccessTierDao.findAll()).isEmpty();
 
     dbUser = completeRTAndCTRequirements(dbUser);
@@ -1272,14 +1104,10 @@ public class UserServiceAccessTest {
 
     assertRegisteredTierEnabled(dbUser);
     assertControlledTierEnabled(dbUser);
-    assertUserInitialCreditsExpirationExists(initialCreditsExpirationExists);
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,false"})
-  public void testInstitutionRequirement_rtEraDoesNotAffectCTEra(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
-    setEnableInitialCreditsExpiration(enableInitialCreditsExpiration);
+  @Test
+  public void testInstitutionRequirement_rtEraDoesNotAffectCTEra() {
     assertThat(userAccessTierDao.findAll()).isEmpty();
     providedWorkbenchConfig.access.enableEraCommons = true;
     providedWorkbenchConfig.access.enableRasLoginGovLinking = true;
@@ -1298,35 +1126,27 @@ public class UserServiceAccessTest {
 
     assertRegisteredTierEnabled(dbUser);
     assertControlledTierEnabled(dbUser);
-    assertUserInitialCreditsExpirationExists(initialCreditsExpirationExists);
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,false"})
-  public void test_updateUserWithRetries_emailValidForRTButNotValidForCT(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
-    setEnableInitialCreditsExpiration(enableInitialCreditsExpiration);
+  @Test
+  public void test_updateUserWithRetries_emailValidForRTButNotValidForCT() {
     assertThat(userAccessTierDao.findAll()).isEmpty();
     dbUser = completeRTAndCTRequirements(dbUser);
 
-    ctTierConfig.setEmailDomains(List.of("fakeDomain.com"));
+    ctTierConfig.setEmailDomains(Arrays.asList("fakeDomain.com"));
     updateInstitutionTier(ctTierConfig);
 
     dbUser = updateUserAccessTiers();
 
     assertRegisteredTierEnabled(dbUser);
     assertUserNotInAccessTier(dbUser, controlledTier);
-    assertUserInitialCreditsExpirationExists(initialCreditsExpirationExists);
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,false"})
-  public void test_updateUserWithRetries_updateInvalidEmailForCT(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
-    test_updateUserWithRetries_emailValidForRTButNotValidForCT(
-        enableInitialCreditsExpiration, initialCreditsExpirationExists);
+  @Test
+  public void test_updateUserWithRetries_updateInvalidEmailForCT() {
+    test_updateUserWithRetries_emailValidForRTButNotValidForCT();
 
-    ctTierConfig.setEmailDomains(List.of("domain.com"));
+    ctTierConfig.setEmailDomains(Arrays.asList("domain.com"));
     updateInstitutionTier(ctTierConfig);
 
     dbUser = updateUserAccessTiers();
@@ -1335,11 +1155,8 @@ public class UserServiceAccessTest {
     assertControlledTierEnabled(dbUser);
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,false"})
-  public void test_updateUserWithRetries_didNotSignCTAgreement(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
-    setEnableInitialCreditsExpiration(enableInitialCreditsExpiration);
+  @Test
+  public void test_updateUserWithRetries_didNotSignCTAgreement() {
     assertThat(userAccessTierDao.findAll()).isEmpty();
     dbUser = completeRTAndCTRequirements(dbUser);
     Institution institution = institutionService.getByUser(dbUser).get();
@@ -1354,14 +1171,10 @@ public class UserServiceAccessTest {
 
     assertRegisteredTierEnabled(dbUser);
     assertUserNotInAccessTier(dbUser, controlledTier);
-    assertUserInitialCreditsExpirationExists(initialCreditsExpirationExists);
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,false"})
-  public void test_updateUserWithRetries_eraFFisOff_CT(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
-    setEnableInitialCreditsExpiration(enableInitialCreditsExpiration);
+  @Test
+  public void test_updateUserWithRetries_eraFFisOff_CT() {
     providedWorkbenchConfig.access.enableEraCommons = false;
     assertThat(userAccessTierDao.findAll()).isEmpty();
 
@@ -1380,14 +1193,10 @@ public class UserServiceAccessTest {
 
     assertRegisteredTierEnabled(dbUser);
     assertControlledTierEnabled(dbUser);
-    assertUserInitialCreditsExpirationExists(initialCreditsExpirationExists);
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,false"})
-  public void test_updateUserWithRetries_ct_complianceTrainingFFisOff_CT(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
-    setEnableInitialCreditsExpiration(enableInitialCreditsExpiration);
+  @Test
+  public void test_updateUserWithRetries_ct_complianceTrainingFFisOff_CT() {
     providedWorkbenchConfig.access.enableComplianceTraining = false;
     assertThat(userAccessTierDao.findAll()).isEmpty();
 
@@ -1403,14 +1212,10 @@ public class UserServiceAccessTest {
 
     assertRegisteredTierEnabled(dbUser);
     assertControlledTierEnabled(dbUser);
-    assertUserInitialCreditsExpirationExists(initialCreditsExpirationExists);
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,false"})
-  public void test_updateUserWithRetries_noCT(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
-    setEnableInitialCreditsExpiration(enableInitialCreditsExpiration);
+  @Test
+  public void test_updateUserWithRetries_noCT() {
     // CT does not exist anywhere
     assertThat(userAccessTierDao.findAll()).isEmpty();
 
@@ -1422,7 +1227,6 @@ public class UserServiceAccessTest {
 
     assertRegisteredTierEnabled(dbUser);
     assertUserNotInAccessTier(dbUser, controlledTier);
-    assertUserInitialCreditsExpirationExists(initialCreditsExpirationExists);
   }
 
   // adds `days` days plus most of another day (to demonstrate we are truncating, not rounding)
@@ -1461,11 +1265,7 @@ public class UserServiceAccessTest {
   }
 
   // checks which power most of these tests - confirm that the unregisteringFunction does that
-  private void testUnregistration(
-      Function<DbUser, DbUser> unregisteringFunction,
-      boolean enableInitialCreditsExpiration,
-      boolean userInitialCreditsExpirationExists) {
-    setEnableInitialCreditsExpiration(enableInitialCreditsExpiration);
+  private void testUnregistration(Function<DbUser, DbUser> unregisteringFunction) {
     // initial state: user is unregistered (has no tier memberships)
     assertThat(userAccessTierDao.findAll()).isEmpty();
 
@@ -1479,9 +1279,6 @@ public class UserServiceAccessTest {
     // The user received a DbUserAccessTier when they were registered.
     // They still have it after unregistering but now it is DISABLED.
     assertRegisteredTierDisabled(dbUser);
-
-    // Test whether the user has an initial credits expiration record
-    assertUserInitialCreditsExpirationExists(userInitialCreditsExpirationExists);
   }
 
   // we can trim the signatures since we always call these in the same way
@@ -1615,20 +1412,5 @@ public class UserServiceAccessTest {
             .setInstitution(inst)
             .setInstitutionalRoleEnum(InstitutionalRole.FELLOW);
     verifiedInstitutionalAffiliationDao.save(affiliation);
-  }
-
-  private void setEnableInitialCreditsExpiration(boolean enable) {
-    providedWorkbenchConfig.featureFlags.enableInitialCreditsExpiration = enable;
-  }
-
-  private void assertUserInitialCreditsExpirationExists(boolean expectExists) {
-    DbUserInitialCreditsExpiration dbUserInitialCreditsExpiration =
-        dbUser.getUserInitialCreditsExpiration();
-
-    if (expectExists) {
-      assertNotNull(dbUserInitialCreditsExpiration);
-    } else {
-      assertNull(dbUserInitialCreditsExpiration);
-    }
   }
 }
